--- a/notebooks/parameter_tuning_parallel_plot.ipynb
+++ b/notebooks/parameter_tuning_parallel_plot.ipynb
@@ -145,7 +145,7 @@
     "    color=\"mean_test_score\",\n",
     "    color_continuous_scale=px.colors.sequential.Viridis,\n",
     ")\n",
-    "fig.show()"
+    "fig.show(renderer=\"notebook\")"
    ]
   },
   {
