--- a/notebooks/parameter_tuning_sol_03.ipynb
+++ b/notebooks/parameter_tuning_sol_03.ipynb
@@ -266,7 +266,7 @@
     "    dimensions=[\"n_neighbors\", \"centering\", \"scaling\", \"mean test score\"],\n",
     "    color_continuous_scale=px.colors.diverging.Tealrose,\n",
     ")\n",
-    "fig.show()"
+    "fig.show(renderer=\"notebook\")"
    ]
   },
   {
