--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -216,8 +216,15 @@
     "explore for each parameter. Thus, adding new parameters with their associated\n",
     "values to be explored rapidly becomes computationally expensive. Because of\n",
     "that, here we only explore the combination learning-rate and the maximum\n",
-    "number of nodes for a total of 4 x 3 = 12 combinations.\n",
-    "\n",
+    "number of nodes for a total of 4 x 3 = 12 combinations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
