added the notebooks

--- a/notebooks/02_numerical_pipeline_scaling.ipynb
+++ b/notebooks/02_numerical_pipeline_scaling.ipynb
@@ -137,6 +137,7 @@
     "We show how to apply such normalization using a scikit-learn transformer\n",
     "called `StandardScaler`. This transformer shifts and scales each feature\n",
     "individually so that they all have a 0-mean and a unit standard deviation.\n",
+    "We recall that transformers are estimators that have a `transform` method.\n",
     "\n",
     "We now investigate different steps used in scikit-learn to achieve such a\n",
     "transformation of the data.\n",
