--- a/notebooks/02_numerical_pipeline_introduction.ipynb
+++ b/notebooks/02_numerical_pipeline_introduction.ipynb
@@ -162,11 +162,18 @@
     "![Predictor fit diagram](../figures/api_diagram-predictor.fit.svg)\n",
     "\n",
     "In scikit-learn an object that has a `fit` method is called an **estimator**.\n",
+    "If the estimator additionally has :\n",
+    "- a  `predict` method, it is called a **predictor**. Examples of predictors\n",
+    "  are classifiers or regressors.\n",
+    "- a `transform` method, it is called a **transformer**. Examples of\n",
+    "  transformers are scalers or encoders. We will see more about transformers in\n",
+    "  the next notebook.\n",
+    "\n",
     "The method `fit` is composed of two elements: (i) a **learning algorithm** and\n",
     "(ii) some **model states**. The learning algorithm takes the training data and\n",
     "training target as input and sets the model states. These model states are\n",
-    "later used to either predict (for classifiers and regressors) or transform\n",
-    "data (for transformers).\n",
+    "later used to either predict or transform data as explained above. See the\n",
+    "glossary for more detailed definitions.\n",
     "\n",
     "Both the learning algorithm and the type of model states are specific to each\n",
     "type of model."
@@ -204,8 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An estimator (an object with a `fit` method) with a `predict` method is called\n",
-    "a **predictor**. We can illustrate the prediction mechanism as follows:\n",
+    "We can illustrate the prediction mechanism as follows:\n",
     "\n",
     "![Predictor predict diagram](../figures/api_diagram-predictor.predict.svg)\n",
     "\n",
