--- a/notebooks/02_numerical_pipeline_scaling.ipynb
+++ b/notebooks/02_numerical_pipeline_scaling.ipynb
@@ -125,7 +125,8 @@
     "feature contribute approximately equally to the distance computations.</li>\n",
     "<li>Many models such as logistic regression use a numerical solver (based on\n",
     "gradient descent) to find their optimal parameters. This solver converges\n",
-    "faster when the features are scaled.</li>\n",
+    "faster when the features are scaled, as it requires less steps (called\n",
+    "<strong>iterations</strong>) to reach the optimal solution.</li>\n",
     "</ul>\n",
     "</div>\n",
     "\n",
