--- a/notebooks/03_categorical_pipeline.ipynb
+++ b/notebooks/03_categorical_pipeline.ipynb
@@ -44,11 +44,10 @@
     "\n",
     "## Identify categorical variables\n",
     "\n",
-    "As we saw in the previous section, a numerical variable is a\n",
-    "quantity represented by a real or integer number. These variables can be\n",
-    "naturally handled by machine learning algorithms that are typically composed\n",
-    "of a sequence of arithmetic instructions such as additions and\n",
-    "multiplications.\n",
+    "As we saw in the previous section, a numerical variable is a quantity\n",
+    "represented by a continous or integer number. These variables can be naturally\n",
+    "handled by machine learning algorithms that are typically composed of a\n",
+    "sequence of arithmetic instructions such as additions and multiplications.\n",
     "\n",
     "In contrast, categorical variables have discrete values, typically\n",
     "represented by string labels (but not only) taken from a finite list of\n",
