--- a/notebooks/03_categorical_pipeline_ex_02.ipynb
+++ b/notebooks/03_categorical_pipeline_ex_02.ipynb
@@ -106,7 +106,7 @@
     "print(\n",
     "    \"The mean cross-validation accuracy is: \"\n",
     "    f\"{scores.mean():.3f} \u00b1 {scores.std():.3f} \"\n",
-    "    f\"with a fitting time of {elapsed_time:.3f}\"\n",
+    "    f\"with a fitting time of {elapsed_time:.3f} seconds\"\n",
     ")"
    ]
   },
