--- a/notebooks/ensemble_hist_gradient_boosting.ipynb
+++ b/notebooks/ensemble_hist_gradient_boosting.ipynb
@@ -77,7 +77,7 @@
     "    data,\n",
     "    target,\n",
     "    scoring=\"neg_mean_absolute_error\",\n",
-    "    n_jobs=2,\n",
+    "    # n_jobs=2,  # Uncomment this line if you run locally\n",
     ")"
    ]
   },
@@ -178,7 +178,7 @@
     "    data,\n",
     "    target,\n",
     "    scoring=\"neg_mean_absolute_error\",\n",
-    "    n_jobs=2,\n",
+    "    # n_jobs=2,  # Uncomment this line if you run locally\n",
     ")"
    ]
   },
@@ -233,7 +233,7 @@
     "    data,\n",
     "    target,\n",
     "    scoring=\"neg_mean_absolute_error\",\n",
-    "    n_jobs=2,\n",
+    "    # n_jobs=2,  # Uncomment this line if you run locally\n",
     ")"
    ]
   },
