--- a/notebooks/ensemble_hyperparameters.ipynb
+++ b/notebooks/ensemble_hyperparameters.ipynb
@@ -122,7 +122,7 @@
     "    scoring=\"neg_mean_absolute_error\",\n",
     "    n_iter=10,\n",
     "    random_state=0,\n",
-    "    n_jobs=2,\n",
+    "    # n_jobs=2,  # Uncomment this line if you run locally\n",
     ")\n",
     "search_cv.fit(data_train, target_train)\n",
     "\n",
@@ -230,7 +230,7 @@
     "    scoring=\"neg_mean_absolute_error\",\n",
     "    n_iter=20,\n",
     "    random_state=0,\n",
-    "    n_jobs=2,\n",
+    "    # n_jobs=2, # Uncomment this line if you run locally\n",
     ")\n",
     "search_cv.fit(data_train, target_train)\n",
     "\n",
