--- a/notebooks/ensemble_sol_04.ipynb
+++ b/notebooks/ensemble_sol_04.ipynb
@@ -104,7 +104,12 @@
     "\n",
     "cv = KFold(n_splits=5, shuffle=True, random_state=0)\n",
     "results = cross_validate(\n",
-    "    search, data, target, cv=cv, return_estimator=True, n_jobs=2\n",
+    "    search,\n",
+    "    data,\n",
+    "    target,\n",
+    "    cv=cv,\n",
+    "    return_estimator=True,\n",
+    "    # n_jobs=2  # Uncomment this if you run locally\n",
     ")"
    ]
   },
