Update corresponding notebook

--- a/notebooks/clustering_supervised_metrics.ipynb
+++ b/notebooks/clustering_supervised_metrics.ipynb
@@ -10,7 +10,7 @@
     "introduce the use of performance metrics to evaluate a clustering model when\n",
     "we have access to labeled data. Our goal is to evaluate whether the cluster\n",
     "structure favored by k-means on the preprocessed text aligns with the\n",
-    "editorial categories assigned by BBC News editors.\n",
+    "editorial categories assigned by Wikinews editors.\n",
     "\n",
     "## Feature engineering for text data\n",
     "\n",
@@ -59,7 +59,7 @@
     "strategies](https://scikit-learn.org/stable/auto_examples/text/plot_hashing_vs_dict_vectorizer.html)\n",
     "for more information.\n",
     "\n",
-    "Now let us use the BBC News dataset to show how text documents can be cluster\n",
+    "Now let us use the Wikinews dataset to show how text documents can be cluster\n",
     "by topic."
    ]
   },
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../datasets/bbc_news.csv\")\n",
+    "data = pd.read_csv(\"../datasets/wiki_news.csv\")\n",
     "data"
    ]
   },
@@ -122,15 +122,15 @@
    "metadata": {},
    "source": [
     "Our pipeline has grouped the documents into 3 clusters, even though the\n",
-    "dataset contains 5 categories assigned by BBC editors. We chose this on\n",
+    "dataset contains 5 categories assigned by Wikinews editors. We chose this on\n",
     "purpose, to show that k-means always produces a number of clusters that\n",
     "matches the `n_clusters` parameter, regardless of what's in the data.\n",
     "\n",
     "## Supervised metrics for clustering evaluation\n",
     "\n",
     "Even though clustering is an unsupervised learning method, we have access to\n",
-    "labels for the categories that were assigned by the BBC editors, allowing us\n",
-    "to evaluate how well the cluster labels found by k-means match those human\n",
+    "labels for the categories that were assigned by the Wikinews editors, allowing\n",
+    "us to evaluate how well the cluster labels found by k-means match those human\n",
     "assigned labels.\n",
     "\n",
     "We could try to use classification metrics such as the accuracy. However, the\n",
@@ -143,7 +143,7 @@
     "\n",
     "In this notebook, we'll use two metrics: V-measure and Adjusted Rand Index\n",
     "(ARI). The V-measure quantifies alignment of the clustering assignment with\n",
-    "the BBC category assignment used as reference by evaluating two properties:\n",
+    "the Wiki category assignment used as reference by evaluating two properties:\n",
     "- homogeneity: each cluster contains only members of a single category;\n",
     "- completeness: all members of a given category are assigned to the same\n",
     "  cluster.\n",
@@ -183,8 +183,8 @@
     "from sklearn.model_selection import ShuffleSplit\n",
     "\n",
     "cv = ShuffleSplit(n_splits=5, train_size=0.75, random_state=0)\n",
-    "data_encoded = StringEncoder().fit_transform(data[\"text\"])\n",
-    "n_clusters_values = range(2, 11)\n",
+    "data_encoded = StringEncoder(random_state=0).fit_transform(data[\"text\"])\n",
+    "n_clusters_values = list(range(2, 11))\n",
     "scoring_names = {\n",
     "    \"V-measure\": \"v_measure_score\",\n",
     "    \"ARI\": \"adjusted_rand_score\",\n",
@@ -205,7 +205,7 @@
     "        ax=ax,\n",
     "    )\n",
     "    ax.set(\n",
-    "        ylim=(-0.1, 1.1),\n",
+    "        ylim=(0.0, 1.0),\n",
     "        xlabel=None,\n",
     "        ylabel=scoring_name,\n",
     "    )\n",
@@ -219,10 +219,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe that both V-measure and ARI are much better than chance. Even more\n",
-    "they reach their maximum value when `n_clusters=5`. This is not surprising\n",
-    "because this is the number of human-assigned categories in the dataset and\n",
-    "both metrics quantify alignment with those labels.\n",
+    "We observe that both V-measure and ARI reach their maximum value when\n",
+    "`n_clusters=7`. It does not match the number of human-assigned categories in\n",
+    "the dataset but is relatively close to it, possibly indicating the presence of\n",
+    "well-defined sub-clusters that still share information with those labels, for\n",
+    "example \"tech - space\" and \"tech - internet\".\n",
     "\n",
     "The relatively good metrics values observed for `n_clusters=5` reflects both\n",
     "good editorial labels (as the categories are well-defined and internally\n",
@@ -282,23 +283,24 @@
    "metadata": {},
    "source": [
     "\n",
-    "The silhouette score analysis favors larger values for `n_clusters` (between\n",
-    "20 and 40) than the 5 categories chosen by the BBC editors.\n",
+    "The silhouette analysis favors larger values for `n_clusters` (around\n",
+    "30) than the 5 categories chosen by the Wikinews editors, or than the 7\n",
+    "categories suggested by our supervised metrics. This also hints to the\n",
+    "existance of sub-clusters inside the 5 Wiki categories. The silhouette peak at\n",
+    "`n_clusters=30` means that splitting the data into about 30 smaller categories\n",
+    "maximizes how compact each cluster is, and how well-separated it is from the\n",
+    "others.\n",
     "\n",
-    "The finer-grained clusters found by k-means for `n_clusters=30` could\n",
-    "potentially match sub-clusters of the 5 BBC categories. However, categorizing\n",
-    "news articles in too fine-grained topics would make the navigation on their\n",
-    "website too confusing. Therefore for this application, it can be meaningful\n",
-    "to select a number of clusters that is smaller than the number of clusters\n",
-    "that maximizes the silhouette score.\n",
+    "However, categorizing news articles in too fine-grained topics would make the\n",
+    "navigation on a news website too confusing. Therefore for this application, it\n",
+    "can be meaningful to select a number of clusters that is smaller than the\n",
+    "number of clusters which maximizes the silhouette score.\n",
     "\n",
-    "We can also, observe that the silhouette curves are not very stable under\n",
-    "resampling and that the maximum silhouette score is not very high, which\n",
-    "indicates that the clusters are not very well separated from each other: this\n",
-    "could be explained by the fact that some documents could meaningfully belong\n",
-    "to more than one topical category: for instance, a news article about a tech\n",
-    "company being acquired by another could belong to both \"tech\" and \"business\"\n",
-    "categories.\n",
+    "Nevertheless, the maximum silhouette score is not really high, which indicates\n",
+    "that even with 30 categories, the clusters are not well-separated from each\n",
+    "other. Some documents could meaningfully belong to more than one category, for\n",
+    "instance, a news article about a tech company being acquired by another could\n",
+    "belong to both \"tech\" and \"business\" categories.\n",
     "\n",
     "Finally, notice that we used supervised information to quantitatively assess\n",
     "the quality of the match between the clusters found by k-means and our\n",
