--- a/notebooks/cross_validation_validation_curve.ipynb
+++ b/notebooks/cross_validation_validation_curve.ipynb
@@ -255,13 +255,13 @@
     "errors made during the data collection process (besides not measuring the\n",
     "unobserved input feature).\n",
     "\n",
-    "One extreme case could happen if there where samples in the dataset with\n",
-    "exactly the same input feature values but different values for the target\n",
-    "variable. That is very unlikely in real life settings, but could the case if\n",
-    "all features are categorical or if the numerical features were discretized\n",
-    "or rounded up naively. In our example, we can imagine two houses having\n",
-    "the exact same features in our dataset, but having different prices because\n",
-    "of the (unmeasured) seller's rush.\n",
+    "One extreme case could happen if there where samples in the dataset with exactly\n",
+    "the same input feature values but different values for the target variable. That\n",
+    "is very unlikely in real life settings, but could be the case if all features\n",
+    "are categorical or if the numerical features were discretized or rounded up\n",
+    "naively. In our example, we can imagine two houses having the exact same\n",
+    "features in our dataset, but having different prices because of the (unmeasured)\n",
+    "seller's rush.\n",
     "\n",
     "Apart from these extreme case, it's hard to know for sure what should qualify\n",
     "or not as noise and which kind of \"noise\" as introduced above is dominating.\n",
