--- a/notebooks/cross_validation_validation_curve.ipynb
+++ b/notebooks/cross_validation_validation_curve.ipynb
@@ -263,10 +263,10 @@
     "features in our dataset, but having different prices because of the (unmeasured)\n",
     "seller's rush.\n",
     "\n",
-    "Apart from these extreme case, it's hard to know for sure what should qualify\n",
-    "or not as noise and which kind of \"noise\" as introduced above is dominating.\n",
-    "But in practice, the best ways to make our predictive models robust to noise\n",
-    "are to avoid overfitting models by:\n",
+    "Apart from this extreme case, it's hard to know for sure what should qualify or\n",
+    "not as noise and which kind of \"noise\" as introduced above is dominating. But in\n",
+    "practice, the best ways to make our predictive models robust to noise are to\n",
+    "avoid overfitting models by:\n",
     "\n",
     "- selecting models that are simple enough or with tuned hyper-parameters as\n",
     "  explained in this module;\n",
