--- a/notebooks/cross_validation_validation_curve.ipynb
+++ b/notebooks/cross_validation_validation_curve.ipynb
@@ -265,7 +265,7 @@
     "\n",
     "Apart from this extreme case, it's hard to know for sure what should qualify or\n",
     "not as noise and which kind of \"noise\" as introduced above is dominating. But in\n",
-    "practice, the best ways to make our predictive models robust to noise are to\n",
+    "practice, the best way to make our predictive models robust to noise is to\n",
     "avoid overfitting models by:\n",
     "\n",
     "- selecting models that are simple enough or with tuned hyper-parameters as\n",
