--- a/notebooks/linear_models_ex_01.ipynb
+++ b/notebooks/linear_models_ex_01.ipynb
@@ -43,7 +43,7 @@
     "penguins = pd.read_csv(\"../datasets/penguins_regression.csv\")\n",
     "feature_name = \"Flipper Length (mm)\"\n",
     "target_name = \"Body Mass (g)\"\n",
-    "data, target = penguins[[feature_name]], penguins[target_name]"
+    "data, target = penguins[[feature_name]], penguins[[target_name]]"
    ]
   },
   {
