--- a/notebooks/linear_models_sol_01.ipynb
+++ b/notebooks/linear_models_sol_01.ipynb
@@ -43,7 +43,7 @@
     "penguins = pd.read_csv(\"../datasets/penguins_regression.csv\")\n",
     "feature_name = \"Flipper Length (mm)\"\n",
     "target_name = \"Body Mass (g)\"\n",
-    "data, target = penguins[[feature_name]], penguins[target_name]"
+    "data, target = penguins[[feature_name]], penguins[[target_name]]"
    ]
   },
   {
@@ -152,7 +152,7 @@
     "def goodness_fit_measure(true_values, predictions):\n",
     "    # we compute the error between the true values and the predictions of our\n",
     "    # model\n",
-    "    errors = np.ravel(true_values) - np.ravel(predictions)\n",
+    "    errors = true_values - predictions\n",
     "    # We have several possible strategies to reduce all errors to a single value.\n",
     "    # Computing the mean error (sum divided by the number of element) might seem\n",
     "    # like a good solution. However, we have negative errors that will misleadingly\n",
